--- a/css/index.css
+++ b/css/index.css
@@ -1084,7 +1084,7 @@ a.a-rooms{
         grid-template-columns: repeat(5,1fr);
     }
     .footer-list {
-        margin: 0px;
+        margin-top: 0px;
     }
     .footer-list a{
         text-align: left;
