--- a/css/index.css
+++ b/css/index.css
@@ -900,27 +900,39 @@ a.a-rooms{
 /*Partners block*/
 
 
-.partners > .partners-block > .partners-container > #partners-carousel > .carousel-inner > .carousel-item > .part-img{
+.partners > .partners-block > .partners-container > #partners-carousel > .carousel-inner > .carousel-item > .part-item > .part-img{
     height: 100%;
     width: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.partners > .partners-block > .partners-container > #partners-carousel > .carousel-inner > .carousel-item > .part-item{
+    
+    align-items: center;
 }
 
 .partners > .partners-block > .partners-container > #partners-carousel > .carousel-inner > .carousel-item{
     max-height: 260px;
+    
 }
 
 .partners > .partners-block > .partners-container > #partners-carousel{
-    margin-top: 45px;
+    margin-top: 45px; 
 }
 
 .partners > .partners-block > .partners-container {
- max-width: 1200px;
+    max-width: 1200px;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .partners > .partners-block{
     align-items: center;
     padding-left: 24px;
     padding-right: 24px;
+    
 }
 
 .partners{
