--- a/css/index.css
+++ b/css/index.css
@@ -543,13 +543,14 @@ a.a-rooms{
 }
 
 .our-rooms > .rooms-container > .containery .col > .card > .damn-image > .rooms{
-    max-width: 100%;
-    max-height: 100%;
-    align-items: center;
+    width: 100%;
+    height: 100%;
 }
 
 .our-rooms > .rooms-container > .containery .col > .card > .damn-image{
     align-items: center;
+    max-width: auto;
+    max-height: 380px;
 }
 
 .our-rooms > .rooms-container > .containery .col > .card > .card-body > h3{
@@ -581,6 +582,9 @@ a.a-rooms{
     background-color: #ffffff;
     text-align: center;
     border-radius:0;
+    min-height: 600px;
+    display: grid;
+    grid-template-columns: 1fr;
 }
 
 .our-rooms > .rooms-container > .containery .col{
@@ -597,14 +601,15 @@ a.a-rooms{
 .our-rooms > .rooms-container > .containery{
     margin-top: 45px;
     padding: 0 0 0 0;
-    margin-left: 0;
-    margin-right: 0;
-    
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .our-rooms > .rooms-container{
     padding-left: 24px;
     padding-right: 24px;
+    align-items: center;
 }
 
 .our-rooms {
@@ -614,15 +619,33 @@ a.a-rooms{
     background-color: #fff4e9;
 }
 
-@media (min-width:320px) {
-    .our-rooms > .rooms-container > .containery .col > .card{
-    min-height: 600px;
-    }
-}
-
 @media (min-width:770px) {
+    
+    .our-rooms > .rooms-container > .containery .col > .card > .damn-image > .rooms{
+        height: 100%;
+        width: auto;
+    }
+
+    .our-rooms > .rooms-container > .containery .col > .card > .card-body {
+        padding-left: 40px;
+        padding-right: 40px;
+    }
+
+    .our-rooms > .rooms-container > .containery > .row > .col > .card > .part-1{
+        grid-column: 1 ;
+        grid-row: 1;
+    }
+
+    .our-rooms > .rooms-container > .containery > .row > .col > .card > .part-2{
+        grid-column: 2 ;
+        grid-row: 1;
+    }
+
+
     .our-rooms > .rooms-container > .containery .col > .card{
-        min-height: 745px;
+        min-height: 450px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
     }
     
     .our-rooms > .rooms-container{
@@ -634,6 +657,13 @@ a.a-rooms{
         align-items: center;
         padding-top: 80px;
         padding-bottom: 95px;
+    }
+}
+
+@media (min-width:990px) {
+    .our-rooms > .rooms-container > .containery .col > .card > .damn-image > .rooms{
+        height: 100%;
+        width: auto;
     }
 }
 /**/
