--- a/css/index.css
+++ b/css/index.css
@@ -1046,28 +1046,11 @@ a.a-rooms{
     max-width: 1200px;
     align-items: center;
 }
-.location > .location-container > .loc-parts> .loc-grid > .map > a{
-    color:red;
-}
-.location > .location-container > .loc-parts> .loc-grid > .map{
-    font-size: 20px;
-    animation: blink 1s infinite;
-    text-align: center;
-}
 
-.location > .location-container > .loc-parts> .loc-grid > .map:hover{
-    font-size: 50px; 
-    animation: blink 1s infinite; 
+.location > .location-container > .loc-parts> .loc-grid > .loc-grid> .map{
+    height: 1px;
+    min-height: 320px;
 }
-@keyframes blink {
-    from { 
-        opacity: 1;
-    }
-    to { 
-        opacity: 0.5;  
-    }
-   }
-
 .location > .location-container{
     padding-left: 24px;
     padding-right: 24px;
